--- a/medium/index.html
+++ b/medium/index.html
@@ -37,16 +37,20 @@
 
     <main>
       <div class="container1">
-        <div class="box1">
-          <p class="big">Medium is a place to write, read, and connect</p>
-        </div>
-
-        <div class="box1">
-          <img
-            src="https://miro.medium.com/max/698/4*BIK9VGjeCj2TaTDw4id2nA.png"
-            alt=""
-          />
-        </div>
+          <div class="title-container">
+            <div class="box1">
+                <p class="big">Medium is a place to write, read, and connect</p>
+                <p class="small">It's easy and free to post your thinking on any topic and connect with millions of readers.</p>
+              </div>
+      
+              <div class="box1">
+                <img
+                  src="https://miro.medium.com/max/698/4*BIK9VGjeCj2TaTDw4id2nA.png"
+                  alt=""
+                />
+              </div>
+          </div>
+       
       </div>
 
       <div class="bigcontainer">
