--- a/medium/form.html
+++ b/medium/form.html
@@ -52,7 +52,8 @@
           }),
         }
       );
-      console.log(data);
+      const getData = fetch("https://dashingtoothpaste.backendless.app/api/data/Blog_Data").then(x=>x.json());
+      console.log(data,getData);
     });
   </script>
 </html>
